Correction in align in the footer

--- a/stylesheets/landing.css
+++ b/stylesheets/landing.css
@@ -2770,6 +2770,9 @@ a {
     margin: 0 auto !important;
     margin-bottom: 20px!important;
   }
+  .wrapper{
+    padding: 0;
+  }
 }
 
 @media only screen and (max-width: 340px){
